<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/watch"
        android:title="@string/watch"
        android:icon="@drawable/ic_watch"
        />
<!--    <item-->
<!--        android:id="@+id/group"-->
<!--        android:title="@string/group"-->
<!--        android:icon="@drawable/ic_group"-->
<!--        />-->
    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification"
        />
    <item
        android:id="@+id/menu"
        android:title="@string/menu"
        android:icon="@drawable/ic_menu"
        />
</menu>