<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_splash"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoOfUser"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icInforUser"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_user_infor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/textInforUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/infor_user"
            android:textColor="@color/text_background_splash"
            app:layout_constraintBottom_toBottomOf="@+id/icInforUser"
            app:layout_constraintStart_toEndOf="@+id/icInforUser"
            app:layout_constraintTop_toTopOf="@+id/icInforUser" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoOfUser">

        <ImageView
            android:id="@+id/icInforFriend"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_user_friend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/textInforFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/friend"
            android:textColor="@color/text_background_splash"
            app:layout_constraintBottom_toBottomOf="@+id/icInforFriend"
            app:layout_constraintStart_toEndOf="@+id/icInforFriend"
            app:layout_constraintTop_toTopOf="@+id/icInforFriend" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageUser"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

        <ImageView
            android:id="@+id/icInforImage"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_user_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/textInforImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/image"
            android:textColor="@color/text_background_splash"
            app:layout_constraintBottom_toBottomOf="@+id/icInforImage"
            app:layout_constraintStart_toEndOf="@+id/icInforImage"
            app:layout_constraintTop_toTopOf="@+id/icInforImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>