<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".Activities.SignUpActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/signin"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backSignIn"
            app:layout_constraintVertical_bias="0.15" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/background_layer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/email"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email">

                <TextView
                    android:id="@+id/confirmFogetpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_signin"
                    android:gravity="center"
                    android:maxLength="@integer/max_length_input"
                    android:paddingStart="@dimen/_34sdp"
                    android:paddingTop="@dimen/_11sdp"
                    android:paddingEnd="@dimen/_34sdp"
                    android:paddingBottom="@dimen/_11sdp"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toBottomOf="@+id/textSavepassword" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/white"
                    android:visibility="invisible" />
            </FrameLayout>

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/backgrond_input"
                android:ems="10"
                android:hint="@string/ten_tai_khoan"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_42sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:minHeight="@dimen/_43sdp"
                android:paddingStart="@dimen/_29sdp"
                android:paddingEnd="@dimen/_29sdp"
                android:textSize="@dimen/text_size_small"
                android:maxLength="@integer/max_length_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/_13sdp"
                android:layout_height="@dimen/_13sdp"
                android:layout_marginStart="@dimen/_11sdp"
                android:background="@drawable/ic_user"
                android:backgroundTint="@color/ic_color"
                android:importantForAutofill="no"
                android:paddingStart="@dimen/_14sdp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toTopOf="@+id/email" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView3"
            android:maxLines="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_email_phonenumber"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageView
            android:id="@+id/backSignIn"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrowleft" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>