<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".Activities.SignUpActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/signin"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backSignIn"
            app:layout_constraintVertical_bias="0.15" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/background_layer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/num1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/backgrond_input"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                app:layout_constraintEnd_toStartOf="@+id/view3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_38sdp"
                app:layout_constraintEnd_toEndOf="@+id/sendcode"
                app:layout_constraintStart_toStartOf="@+id/sendcode"
                app:layout_constraintTop_toBottomOf="@+id/sendcode">

                <TextView
                    android:id="@+id/activeConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_signin"
                    android:gravity="center"
                    android:maxLength="@integer/max_length_input"
                    android:paddingStart="@dimen/_34sdp"
                    android:paddingTop="@dimen/_11sdp"
                    android:paddingEnd="@dimen/_34sdp"
                    android:paddingBottom="@dimen/_11sdp"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toBottomOf="@+id/textSavepassword" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/white"
                    android:visibility="invisible" />
            </FrameLayout>

            <EditText
                android:id="@+id/num2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/backgrond_input"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintStart_toEndOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/num1" />

            <EditText
                android:id="@+id/num3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/backgrond_input"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                app:layout_constraintEnd_toStartOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/num2" />

            <EditText
                android:id="@+id/num4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:background="@drawable/backgrond_input"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/num3" />

            <View
                android:id="@+id/view2"
                android:layout_width="1dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view3"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_35sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view4"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/_35sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sendcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/sendcode"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="@+id/num4"
                app:layout_constraintStart_toStartOf="@+id/num1"
                app:layout_constraintTop_toBottomOf="@+id/num3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView3"
            android:maxLines="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/describe_active"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageView
            android:id="@+id/backSignIn"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrowleft" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>